@@ -493,6 +493,7 @@
                     <mrow>&amp;=(-1)\vect{u}&amp;&amp;
                         <xref ref="property-Z" acro="Z" autoname="yes"/></mrow>
                 </md>.</p>
+                <p>See <xref ref="exercise-VS-T31" acro="VS-T31" autoname="yes"/> for a different approach to proving this theorem.</p>
             </proof>
         </theorem>
         <p>Because of this theorem, we can now write linear combinations like <m>6\vect{u}_1+(-4)\vect{u}_2</m>
@@ -744,6 +745,23 @@ as <m>6\vect{u}_1-4\vect{u}_2</m>, even though we have not formally defined an o
                         <xref ref="property-DSA" acro="DSA" autoname="yes"/></mrow>
                 </md>.  So by <xref ref="theorem-SMEZV" acro="SMEZV" autoname="yes"/> we conclude that <m>\alpha-1=0</m> or <m>\vect{x}=\zerovector</m>.  However, since our hypothesis was <em>for every</em> <m>\vect{x}\in V</m>, we are left with the first possibility and <m>\alpha=1</m>.</p>
                 <p>There is one flaw in the proof above, and as stated, the problem is not correct either.  Can you spot the flaw and as a result correct the problem statement?  (Hint: <xref ref="example-VSS" acro="VSS" autoname="yes"/>).</p>
+            </solution>
+        </exercise>
+        <exercise number="T31" xml:id="exercise-VS-T31">
+            <statement>
+                <p>Construct an alternate proof of <xref ref="theorem-AISM" acro="AISM" autoname="yes"/> by demonstrating that <m>(-1)\vect{x}</m> is the additive inverse of <m>\vect{x}</m>.</p>
+            </statement>
+            <solution xml:id="solution-VS-T31">
+                <p>We have<md>
+                    <mrow>\vect{x}+(-1)\vect{x}&amp;=1\vect{x}+(-1)\vect{x}&amp;&amp;
+                        <xref ref="property-O" acro="O" autoname="yes"/></mrow>
+                    <mrow>&amp;=(1+(-1))\vect{x}&amp;&amp;
+                        <xref ref="property-DSA" acro="DSA" autoname="yes"/></mrow>
+                    <mrow>&amp;=0\vect{x}&amp;&amp;
+                        <xref ref="property-AICN" acro="AICN" autoname="yes"/></mrow>
+                    <mrow>&amp;=\zerovector&amp;&amp;
+                        <xref ref="theorem-ZSSM" acro="ZSSM" autoname="yes"/></mrow>
+                </md>.  Then, in the spirit of the proof of <xref ref="theorem-SS" acro="SS" autoname="yes"/>, the vector <m>(-1)\vect{x}</m> does what it needs to do to satisfy <xref ref="property-AI" acro="AI" autoname="yes"/> and therefore is an additive inverse of <m>\vect{x}</m> (and we know the inverse is unique by <xref ref="theorem-AIU" acro="AIU" autoname="yes"/>).</p>
             </solution>
         </exercise>
     </exercises>
